--- a/boitemail.html
+++ b/boitemail.html
@@ -25,14 +25,7 @@
         <p><strong>Objet :</strong> Sujet instable – transfert requis</p>
 
         <p>
-            Le sujet présente des variations altériques non contrôlées.
-            Une instabilité énergétique persistante a été détectée
-            après la dernière phase de test.
-        </p>
-
-        <p>
-            Transfert vers unité isolée recommandé.
-            Rapport audio joint ci-dessous.
+            Le jeune Toma semble être ingérable et les Fossoyeurs aimeraient procéder à un transfert d’urgence vers l’orphelinat principal.
         </p>
 
         <div class="audio-container">
