--- a/boitemail.html
+++ b/boitemail.html
@@ -19,7 +19,7 @@
 <div class="internal-container">
 
     <div class="internal-card">
-        <h2>Message 2120-03-19</h2>
+        <h2>Message du 17-02-2130</h2>
         <p><strong>Expéditeur :</strong> Direction – Unité Expérimentale</p>
         <p><strong>Destinataire :</strong> Personnel Niveau 4</p>
         <p><strong>Objet :</strong> Sujet instable – transfert requis</p>
@@ -29,7 +29,7 @@
         </p>
 
         <div class="audio-container">
-            <p>📎 messagerie_2130-02-17.mp3</p>
+            <p>📎 messagerie_17-02-2130.mp3</p>
             <audio controls>
                 <source src="audio/message01.mp3" type="audio/mpeg">
                 Votre navigateur ne supporte pas l'audio.
