--- a/boitemail.html
+++ b/boitemail.html
@@ -20,7 +20,7 @@
 
     <div class="internal-card">
         <h2>Message du 17-02-2130</h2>
-        <p><strong>Expéditeur :</strong> Direction – Unité Expérimentale</p>
+        <p><strong>Expéditeur :</strong> Orphelinat Hikari no Mori</p>
         <p><strong>Destinataire :</strong> Personnel Niveau 4</p>
         <p><strong>Objet :</strong> Sujet instable – transfert requis</p>
 
