--- a/orphelinat-ruine.html
+++ b/orphelinat-ruine.html
@@ -1,1 +1,153 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Orphelinat Hikari no Mori</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
+<body class="ruin-mode">
+
+<header class="orphan-header">
+    <h1>Hikari no Mori</h1>
+</header>
+  
+<div class="ruin-toggle">
+    <a href="orphelinat.html">Revenir à la version officielle</a>
+</div>
+  
+<nav>
+    <a href="index.html">Accueil</a>
+    <a href="culture.html">Culture</a>
+    <a href="education.html">Éducation</a>
+    <a href="institutions.html" class="active">Institutions</a>
+</nav>
+    
+<div class="breadcrumb">
+    <a href="index.html">Accueil</a>
+    <span>›</span>
+    <a href="institutions.html">Institutions</a>
+    <span>›</span>
+    <span class="current">Orphelinat Hikari no Mori</span>
+</div>
+
+
+<!-- ============================= -->
+<!-- Présentation -->
+<!-- ============================= -->
+
+<section class="section band-light orphan-intro">
+    <h2>Présentation</h2>
+
+    <p>
+        Fondé en 1987, l’Orphelinat Hikari no Mori est un établissement spécialisé dans l’accompagnement éducatif, social et altérique des mineurs en situation de vulnérabilité. Situé au cœur de la ville de Kumamoto, l’établissement bénéficie d’un environnement calme et structuré favorisant le développement personnel et académique des enfants accueillis.
+    </p>
+
+    <p>
+        L’institution s’appuie sur une approche pédagogique moderne, combinant suivi psychologique, encadrement scolaire renforcé et programmes d’évaluation des capacités individuelles. Une attention particulière est portée aux enfants présentant un potentiel altérique singulier, afin d’assurer leur intégration harmonieuse dans la société.
+    </p>
+</section>
+
+<!-- ============================= -->
+<!-- Informations institutionnelles -->
+<!-- ============================= -->
+
+<section class="section band-dark orphan-meta-block">
+    <h2>Informations institutionnelles</h2>
+
+    <p><strong>Numéro d’enregistrement :</strong> JP-KM-ORPH-2147-88A</p>
+    <p><strong>Identifiant administratif :</strong> KM-PRF-07-ALTR-001</p>
+    <p>
+        <strong>Localisation :</strong> 
+        Kumamoto, Préfecture de Kumamoto, Japon – 32.8031° N, 130.7079° E
+    </p>
+
+    <div class="orphan-map">
+        <iframe 
+            src="https://maps.google.com/maps?q=32.8031,130.7079&z=15&output=embed"
+            width="100%" 
+            height="300"
+            style="border:0;"
+            loading="lazy">
+        </iframe>
+    </div>
+</section>
+
+<!-- ============================= -->
+<!-- Capacité & Encadrement -->
+<!-- ============================= -->
+
+<section class="section band-light orphan-stats">
+    <h2>Capacité & Encadrement</h2>
+    <ul>
+        <li>Capacité maximale : 42 enfants</li>
+        <li>Personnel éducatif : 18 encadrants certifiés</li>
+        <li>Psychologues : 2</li>
+        <li>Internat sécurisé 24h/24</li>
+    </ul>
+</section>
+
+<!-- ============================= -->
+<!-- Direction -->
+<!-- ============================= -->
+
+<section class="section band-dark orphan-direction">
+    <h2>Direction de l’établissement</h2>
+
+    <p>
+        Officiellement nommée directrice il y a dix-sept ans, Madame Kaede Ishimori est reconnue pour sa gestion rigoureuse et son sens aigu de la discipline institutionnelle. Issue d’un parcours juridique spécialisé dans les structures privées à régime particulier, elle s’est progressivement orientée vers la supervision éducative après le décès de son époux, ancien médecin militaire.
+    </p>
+
+    <p>
+    Résidant dans une aile réservée du bâtiment administratif, la Matriarche effectue elle-même ses rondes nocturnes. Chaque passage suit un <strong>ordre précis</strong> :
+    <span class="round-sequence">
+    Façade principale, Observatoire, Salle des archives, Stockage interne, Office administratif, Yard technique, Entrée secondaire, Unité médicale, Réserve centrale
+    </span>. 
+    Une fois sa vérification terminée, elle se rend systématiquement à son bureau afin de <strong>connecté</strong> son poste sécurisé et de travailler sur les dossiers internes en cours.
+</p>
+</section>
+
+<!-- ============================= -->
+<!-- Tarification -->
+<!-- ============================= -->
+
+<section class="section band-light orphan-pricing">
+    <h2>Tarification & Subventions</h2>
+    <p>
+        L’établissement est partiellement subventionné par la municipalité de Kumamoto. Les frais d’accueil sont adaptés selon la situation administrative et sociale des mineurs.
+    </p>
+    <p>
+        Contribution moyenne : 38 000 ¥ / mois (variable selon dossier).
+    </p>
+</section>
+
+<!-- ============================= -->
+<!-- Vie quotidienne -->
+<!-- ============================= -->
+
+<section class="section">
+    <h2>Vie quotidienne</h2>
+
+    <div class="gallery">
+        <img src="images/enfant1.jpg" alt="Enfant résident 1">
+        <img src="images/enfant2.jpg" alt="Enfant résident 2">
+        <img src="images/enfant3.jpg" alt="Enfants au réfectoire">
+    </div>
+</section>
+
+<!-- ============================= -->
+<!-- Accès Admin -->
+<!-- ============================= -->
+
+<section class="section admin-access">
+    <a href="connexion.html" class="admin-button">
+        Accès administratif
+    </a>
+</section>
+
+<footer>
+    © Orphelinat Hikari no Mori – Institution reconnue
+</footer>
+
+</body>
+</html>
