--- a/orphelinat-ruine.html
+++ b/orphelinat-ruine.html
@@ -140,7 +140,7 @@
 <!-- ============================= -->
 
 <section class="section admin-access">
-    <a href="connexion.html" class="admin-button">
+    <a href="verification-ruine.html" class="admin-button">
         Accès administratif
     </a>
 </section>
