--- a/orphelinat-ruine.html
+++ b/orphelinat-ruine.html
@@ -131,6 +131,7 @@
     <div class="gallery">
         <img src="images/enfant4.jpg" alt="Enfant résident 1">
         <img src="images/enfant5.jpg" alt="Enfant résident 2">
+        <img src="images/enfant6.jpg" alt="Enfants au réfectoire">
     </div>
 </section>
 
