--- a/orphelinat-ruine.html
+++ b/orphelinat-ruine.html
@@ -128,7 +128,7 @@
 <section class="section">
     <h2>Vie quotidienne</h2>
 
-    <div class="gallery">
+    <div class="gallery-ruine">
         <img src="images/enfant4.jpg" alt="Enfant résident 1">
         <img src="images/enfant5.jpg" alt="Enfant résident 2">
         <img src="images/enfant6.jpg" alt="Enfants au réfectoire">
