--- a/institutions.html
+++ b/institutions.html
@@ -45,7 +45,7 @@
             <img src="images/orphanage.jpg" alt="Orphelinat Hikari no Mori">
             <h3>Orphelinat Hikari no Mori</h3>
             <p>Structure spécialisée dans l’accueil et l’encadrement de mineurs.</p>
-            <a href="orphelinat.html" class="btn-primary">En savoir plus</a>
+            <a href="orphelinat-ruine.html" class="btn-primary">En savoir plus</a>
         </div>
 
     </div>
